Add information about 3.2.x not having separate release criteria, as discussed in the gcc mailing list with Phil and Gerald.

--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -8,6 +8,11 @@
 
 <h1>GCC 3.1 Release Criteria</h1>
 
+<p>The GCC 3.2 release is based on the the same sourcebase as GCC 3.1
+and differs from GCC 3.1.1 only in a number of C++ ABI fixes.
+Because of this limited scope, the 3.2 release does not have separate
+release criteria.</p>
+
 <p>This page provides the release criteria for GCC 3.1.  GCC 3.1 will
 not be released until these criteria have been met.  This page
 enumerates the release criteria and provides a rationale for some of
