* thanks.html: Remove this files. 	* index.html: Remove link to thanks.html and links to general GCC 	pages; add link to GCC main page. 	* status.html: Detto.

--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -23,14 +23,12 @@
     <tr><td colspan="2"></td></tr>
 
     <tr><td colspan="2">
-    <a href="index.html">Home</a><br />
+    <a href="index.html">libstdc++ Home</a><br />
+    <a href="../index.html">GCC Home</a><br />
     <a href="status.html">Status</a><br />
     <a href="http://gcc.gnu.org/onlinedocs/libstdc++/faq/index.html">FAQ</a>
 (<a href="http://gcc.gnu.org/onlinedocs/libstdc++/faq/index.txt">text</a>)<br />
     <a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">Documentation</a><br />
-    <a href="../lists.html">Mailing Lists</a><br />
-    <a href="thanks.html">Contributors</a><br />
-    <a href="../readings.html">Links</a><br />
     </td></tr>
 
 </table></td><td></td><td>
