--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -10,9 +10,9 @@
 <h2>Status</h2>
 <hr />
 
-<h3>GCC 3.1</h3>
+<h3>GCC 3.1/3.2</h3>
 
-<p><strong>If you have GCC 3.1, STOP.</strong>  You have the latest
+<p><strong>If you have GCC 3.1 or 3.2, STOP.</strong>  You have the latest
    libstdc++ available.  Once we release another snapshot, this page will
    be updated.
 </p>
