Add ia-32 and x86_64 changes.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -86,11 +86,22 @@ a list of bugs fixed in this release.</p>
 
 <h2>New Targets and Target Specific Improvements</h2>
 
+<h3>IA-32</h3>
+  <ul>
+   <li>Fixed a number of bugs in SSE and MMX intrinsics.</li>
+   <li>Fixed common compiler crashes with SSE instruction set enabled
+       (implied by <code>-march=pentium3</code>, <code>pentium4</code>,
+        <code>athlon-xp</code>)</li>
+   <li>__m128 and __m128i is not 128bit aligned when used in structures.
+  </ul>
 <h3>x86-64</h3>
  
   <ul>
    <li>A bug whereby the compiler could generate bad code for
        <code>bzero</code> has been fixed.</li>
+   <li>ABI fixes (implying ABI incompatibilities with previous version in some
+   corner cases)</li>
+   <li>Fixed prefetch code generation</li>
   </ul>
 
 </body>
