Add x86_64 and IA-32 changes

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -185,7 +185,7 @@
     <li>The HP-PA port now defaults to scheduling for the PA8000 series
         of processors.  Scheduling support for the PA7300 processor has
 	been added.</li>
-    <li>The SPARC, HP-PA, SH4, and x86 ports have been converted to
+    <li>The SPARC, HP-PA, SH4, and x86/pentium ports have been converted to
         use the DFA processor pipeline description.</li>
     <li>The following NetBSD configurations for the SuperH processor family
 	have been added:
@@ -201,6 +201,13 @@
 	  <li>SH5, SHmedia, little-endian, 64-bit default,
 	      <code>sh64le-*-netbsd*</code></li>
 	</ul></li>
+    <li>The following changes have been made to the IA-32/x86-64 port:
+    	<ul>
+	  <li>SSE2 and 3dNOW! intrinsics are now supported.</li>
+	  <li>Support for thread local storage has been added to the IA-32
+	      and x86-64 ports.
+	  <li>The x86-64 port has been significantly improved.</li>
+	</ul>
     <li>The following changes have been made to the MIPS port:
 	<ul>
 	  <li>All configurations now accept the <code>-mabi</code>
