Move information about testing ideas to ../testing/index.html, with a link to that file from here.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -92,31 +92,10 @@ same test" that can be checked mechanically, then write a program that
 does that check, and run it against the entire test suite.</p>
 </li>
 
-<li>Set up more autobuilders.
+<li>Perform additional GCC testing.
 
-<p>We already have an autobuilder by Geoff Keating (see <a
-href="http://people.redhat.com/geoffk/gcc-regression/">gcc-regression</a>),
-which nags people in e-mail when they break the tree.</p>
-
-<p>We'd like to have a similar setup for other platforms.  At the
-least we should have one for each of the primary evaluation platforms
-listed in the <a href="../gcc-3.0/criteria.html">criteria for GCC
-3.0</a>.  However, the more the better.</p>
-
-<p>It would be nice if at least one of these platforms were beefy
-enough that it could run with RTL consistency checks enabled.  This
-slows the compiler down by an order of magnitude, but has found plenty
-of bugs in the past.</p>
-
-<p>In addition to the existing systems, you should look at the <a
-href="http://www.mozilla.org/tinderbox.html">Tinderbox</a> system
-developed for the Mozilla project.</p>
-
-<p>Kaveh Ghazi &lt;<a
-href="mailto:ghazi@caip.rutgers.edu">ghazi@caip.rutgers.edu</a>&gt;
-suggests that the autobuilders should keep track of regressions in the
-number of warnings, and bug patchers until they are fixed, just as
-they do for testsuite regressions now.</p>
+<p>See <a href="http://gcc.gnu.org/testing/">GCC Testing Efforts</a>
+for ideas and information about what's already being done.</p>
 </li>
 
 </ul>
