* correct URL to my test results.

--- a/htdocs/testing/index.html
+++ b/htdocs/testing/index.html
@@ -20,9 +20,9 @@ the test suite directories.</p>
 <h2>Current efforts</h2>
 
 <ul>
-  <li>Ben Elliston operates a Tinderbox-style
-      <a href="http://people.redhat.com/bje/tinderbox.html">build and
-      regression testing system</a>.</li>
+  <li>Ben Elliston operates a Tinderbox-style build and regression
+      testing presentation system called
+      <a href="http://people.redhat.com/bje/flametree/">Flametree</a>.</li>
 
   <li>Several people perform regular builds and regression test runs and
       send their test results to the
