Update pch-branch description.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -157,8 +157,7 @@ you may want to check out include:</p>
   Jaeger &lt;<a href="mailto:aj@suse.de">aj@suse.de</a>&gt;.</li>
   <li>pch-branch.  This branch contains work-in-progress towards a
   precompiled header implementation, including lots of garbage
-  collector changes.  As yet, the branch contains <em>no</em>
-  actual precompiled header work; a public announcement will be made
+  collector changes.  A public announcement will be made
   on the <a href="lists.html">GCC mailing list</a> when it is ready
   for testing.</li>
   <li>cp-parser-branch.  This branch contains a new hand-written recursive
