--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -11,7 +11,7 @@
 <h1><small>Welcome to the GCC home page!</small></h1>
 
 <p>GCC is the GNU Compiler Collection, which currently contains
-front ends for C, C++, Objective C, Fortran,
+front ends for C, C++, Objective-C, Fortran,
 <a href="java/">Java</a>, and Ada, as well as libraries for these
 languages (<a href="libstdc++/">libstdc++</a>, libgcj,...).</p>
 
