Make the changes relevant for GCC 3.2.1 more evident. By Kelley Cook <robert_k_cook@comerica.com>.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -9,13 +9,12 @@
 -->
 
 <body>
-<h1>GCC 3.2 Changes, New Features, and Fixes</h1>
 
 <!-- Changes for later point releases should be added at the top. -->
 
-<h2>Additional changes in GCC 3.2.1 (not released yet)</h2>
+<h1>Changes in GCC 3.2.1 (not released yet)</h1>
 
-<h3>C/C++/Objective-C</h3>
+<h2>C/C++/Objective-C</h2>
 
  <ul>
     <li>The method of constructing the list of directories to be searched
@@ -35,6 +34,28 @@
         noticed until very recently.  Thus we conclude it is not in
         widespread use.)</li>
  </ul>
+
+<h2>New Targets and Target Specific Improvements</h2>
+
+<h3>IA-32</h3>
+  <ul>
+   <li>Fixed a number of bugs in SSE and MMX intrinsics.</li>
+   <li>Fixed common compiler crashes with SSE instruction set enabled
+       (implied by <code>-march=pentium3</code>, <code>pentium4</code>,
+        <code>athlon-xp</code>)</li>
+   <li>__m128 and __m128i is not 128bit aligned when used in structures.</li>
+  </ul>
+<h3>x86-64</h3>
+ 
+  <ul>
+   <li>A bug whereby the compiler could generate bad code for
+       <code>bzero</code> has been fixed.</li>
+   <li>ABI fixes (implying ABI incompatibilities with previous version in some
+   corner cases)</li>
+   <li>Fixed prefetch code generation</li>
+  </ul>
+
+<h1>Changes in GCC 3.2</h1>
 
 <h2>Bug Fixes</h2>
 
@@ -83,26 +104,6 @@ a list of bugs fixed in this release.</p>
     page</a>.</li>
   </ul>
 
-
-<h2>New Targets and Target Specific Improvements</h2>
-
-<h3>IA-32</h3>
-  <ul>
-   <li>Fixed a number of bugs in SSE and MMX intrinsics.</li>
-   <li>Fixed common compiler crashes with SSE instruction set enabled
-       (implied by <code>-march=pentium3</code>, <code>pentium4</code>,
-        <code>athlon-xp</code>)</li>
-   <li>__m128 and __m128i is not 128bit aligned when used in structures.
-  </ul>
-<h3>x86-64</h3>
- 
-  <ul>
-   <li>A bug whereby the compiler could generate bad code for
-       <code>bzero</code> has been fixed.</li>
-   <li>ABI fixes (implying ABI incompatibilities with previous version in some
-   corner cases)</li>
-   <li>Fixed prefetch code generation</li>
-  </ul>
 
 </body>
 </html>
