* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2002-11-10.
+2002-11-17.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -18,7 +18,6 @@ differences are currently required.</p>
 
 <table border="1" width="100%">
 <tr><th>Class</th> <th>libgcj</th> <th>Classpath</th> <th>Merge Status</th> </tr>
-<tr> <td>gnu.java.security.DefaultPermissionCollection</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.Toolkit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Toolkit.diff">Diff</a></td> </tr>
 <tr> <td>java.io.DataOutputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.io.FileDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -56,20 +55,17 @@ differences are currently required.</p>
 <tr> <td>java.lang.VMSecurityManager</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.lang.VMThrowable</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>java.lang.Win32Process</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.net.DatagramSocketImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.DatagramSocketImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.net.DatagramSocket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.net.HttpURLConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.InetAddress</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.JarURLConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.MimeTypeMapper</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.MulticastSocket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.MulticastSocket.diff">Diff</a></td> </tr>
 <tr> <td>java.net.NetPermission</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.NetPermission.diff">Diff</a></td> </tr>
-<tr> <td>java.net.NetworkInterface</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>java.net.NetworkInterface</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.NetworkInterface.diff">Diff</a></td> </tr>
 <tr> <td>java.net.PlainDatagramSocketImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.PlainSocketImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.ServerSocket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.ServerSocket.diff">Diff</a></td> </tr>
 <tr> <td>java.net.SocketAddress</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.SocketAddress.diff">Diff</a></td> </tr>
-<tr> <td>java.net.SocketImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.SocketImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.net.SocketInputStream</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.Socket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.Socket.diff">Diff</a></td> </tr>
 <tr> <td>java.net.SocketOutputStream</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -78,49 +74,20 @@ differences are currently required.</p>
 <tr> <td>java.net.URL</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.URLStreamHandler</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.Buffer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.Buffer.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.BufferOverflowException</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.BufferUnderflowException</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.ByteBuffer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.ByteBuffer.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.ByteChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.ByteChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.Channel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.Channel.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.Channels</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.channels.DatagramChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.DatagramChannel.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.FileChannel</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.channels.FileLock</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.channels.GatheringByteChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.GatheringByteChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.InterruptibleChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.InterruptibleChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.Pipe</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.Pipe.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.ReadableByteChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.ReadableByteChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.ScatteringByteChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.ScatteringByteChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.SelectableChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.SelectableChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.SelectionKey</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.SelectionKey.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.Selector</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.Selector.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.ServerSocketChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.ServerSocketChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.SocketChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.SocketChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.spi.AbstractChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.spi.AbstractChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.spi.AbstractInterruptibleChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.spi.AbstractInterruptibleChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.spi.AbstractSelectableChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.spi.AbstractSelectableChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.spi.AbstractSelectionKey</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.spi.AbstractSelectionKey.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.spi.AbstractSelector</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.spi.AbstractSelector.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.spi.SelectorProvider</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.spi.SelectorProvider.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.WritableByteChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.WritableByteChannel.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.CharBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.charset.CharacterCodingException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.CharacterCodingException.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.charset.CharsetDecoder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.charset.CharsetEncoder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.nio.CharBuffer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.CharBuffer.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.charset.Charset</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.Charset.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.charset.CoderMalfunctionError</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.CoderMalfunctionError.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.charset.CoderResult</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.charset.CodingErrorAction</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.CodingErrorAction.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.charset.IllegalCharsetNameException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.IllegalCharsetNameException.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.charset.MalformedInputException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.MalformedInputException.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.charset.UnmappableCharacterException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.UnmappableCharacterException.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.charset.UnsupportedCharsetException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.charset.UnsupportedCharsetException.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.DoubleBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.FloatBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.IntBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.LongBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.MappedByteBuffer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.MappedByteBuffer.diff">Diff</a></td> </tr>
+<tr> <td>java.nio.ReadOnlyBufferException</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.nio.ShortBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.rmi.server.RMIClassLoader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.rmi.server.RMIClassLoader.diff">Diff</a></td> </tr>
 <tr> <td>java.text.CollationElementIterator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
