--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -173,6 +173,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i586-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00668.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>i586-pc-msdosdjgpp</td>
 <td>MS-DOS session under Win98SE</td>
 <td>Successful (Ada, C, C++, F77, Obj-C; with tweaks):
@@ -295,6 +302,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.9</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00094.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00581.html">3.2</a></td>
 </tr>
 
 <tr>
@@ -436,6 +450,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful (with patch):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01763.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin6.1</td>
+<td>&nbsp;</td>
+<td>Successful (with patch):
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00352.html">3.2</a></td>
 </tr>
 
 <tr>
