Add entry for 3.1.1: hppa2.0w-hp-hpux11.11

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -132,6 +132,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>hppa2.0w-hp-hpux11.11</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00683.html">3.1.1</a></td>
+</tr>
+
+<tr>
 <td>hppa64-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Test results:
