Add entries for regular testing by Loren J. Rittle and Robert Schiele.

--- a/htdocs/testing/index.html
+++ b/htdocs/testing/index.html
@@ -33,6 +33,19 @@ the test suite directories.</p>
       send their test results to the
       <a href="http://gcc.gnu.org/ml/gcc-testresults/">gcc-testresults
       mailing list</a>.</li>
+
+  <li>Loren J. Rittle operates daily builds and regression tests with
+      machine time donated by the FreeBSD project.  There is additional
+      and consolidated information available at
+      <a href="http://people.freebsd.org/~ljrittle/daily-gcc-bootstrap-reports/">
+      this web site</a></li>
+
+  <li>Robert Schiele's nightly testing reports bootstrap failures to the
+      gcc-testresults mailing list as well as reporting test results for
+      successful builds.  His scripts are available from
+      <a href="http://pi3.informatik.uni-mannheim.de/~schiele/autobuild/">
+      this web site</a>.  As with any such tools, please read the
+      documentation before using them.</li>
 </ul>
 
 <h2>Ideas for further testing</h2>
